kubernetes/apps/mini-qr/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mini-qr
spec:
  selector:
    matchLabels:
      app: mini-qr
  replicas: 1
  template:
    metadata:
      labels:
        app: mini-qr
    spec:
      containers:
        - name: mini-qr
          image: ghcr.io/lyqht/mini-qr:v0.32.0@sha256:bca2ac7ccbec8899e6e9a6b91d45d0286238fa0fccf357fa10ca9640d2d09916
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: "128Mi"
              cpu: "500m"
