kubernetes/apps/mini-qr/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mini-qr
spec:
  selector:
    app: mini-qr
  ports:
    - port: 8080
      targetPort: 8080
