kubernetes/apps/mini-qr/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mini-qr
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: traefik
  rules:
    - host: qr.homelab.leehosanganson.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mini-qr
                port:
                  number: 8080
  tls:
    - hosts:
        - qr.homelab.leehosanganson.dev
      secretName: mini-qr-tls
